--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
-    <header>
+    <header            class="container-text-center"> 
 
-        <img src="saturno.png"> 
+        <img  class="rounded circle imagem" src="saturno.png"> 
         <p>Eu sou um humano</p>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
