--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p> </p>
         </div>
     </header>
-    <main> class= "container mt-5"
+    <main> class"container mt-5"
         <h2>Meus Projetos</h2>
 
 
