--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <img src="#" alt="" class="card.img-top">
                 <div class="card-body">
                 <h5 class="card-title">minha biblioteca
+                    <p class="card-text">lorem ipsum do</p>
 
 
                 </h5>
