--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
                 </h5> <p class="card-text">lorem ipsum do</p>
-                <button type="button" class="btn btn-link" data.bs-toggle="modal" data-bs-target="#modal1"> Saiba Maiss
+                <button type="button" class="btn btn-link" data.bs-toggle="modal" data-bs-target="#modal1"> Saiba Mais
                     
 
                 </button>
