--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     
 
 
-                </h5> <p class="card-text">lorem ipsum do</p>
+                </h5> <p class="card-text">lorem ipsum dolor</p>
                 <button type="button" class="btn btn-link" data.bs-toggle="modal" data-bs-target="#modal1"> Saiba Mais
                     
 
