--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <img class="rounded circle imagem" src="saturno.png">
         <p class="lead">Eu sou um humano</p>
-        <h1>eu sou vendedor</h1>
+        <h1>eu sou padeiro</h1>
         <p>minhas habilidades</p>
         <div> 
         <p> </p>
