--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="modal-content">
 
     <div class="modal-header">
-        
+     <h5 class="modal-title">Minha Biblioteca</h5>   
     </div>
     </div>
 
