--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <div class="modal-header">
      <h5 class="modal-title">Minha Biblioteca</h5>   
+     <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
     </div>
     </div>
 
