--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
 
     <div class="modal-header">
      <h5 class="modal-title">Minha Biblioteca</h5>   
-     <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+     <button class="btn-close" type="button" data-bs-dismiss="modal" arial-label="close"></button>
+    </div>
+    <div class="modal-body">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nam vero incidunt quaerat, autem itaque fugiat delectus repellat sequi tenetur dignissimos suscipit velit ab odit ipsa! Adipisci, nulla dolorem sint nostrum maxime nihil placeat ducimus necessitatibus, eligendi temporibus modi pariatur excepturi molestiae soluta reiciendis reprehenderit. Sapiente illum cum ipsam eos?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nam vero incidunt quaerat, autem itaque fugiat delectus repellat sequi tenetur dignissimos suscipit velit ab odit ipsa! Adipisci, nulla dolorem sint nostrum maxime nihil placeat ducimus necessitatibus, eligendi temporibus modi pariatur excepturi molestiae soluta reiciendis reprehenderit. Sapiente illum cum ipsam eos?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nam vero incidunt quaerat, autem itaque fugiat delectus repellat sequi tenetur dignissimos suscipit velit ab odit ipsa! Adipisci, nulla dolorem sint nostrum maxime nihil placeat ducimus necessitatibus, eligendi temporibus modi pariatur excepturi molestiae soluta reiciendis reprehenderit. Sapiente illum cum ipsam eos?</p>
     </div>
     </div>
 
